hphp/hack/test/typecheck/call_in_static_darray.php.exp
File "call_in_static_darray.php", line 7, characters 29-33:
Invalid expression in constant initializer (Parsing[1002])
