hphp/hack/test/typecheck/call_in_static_darray.php
<?hh // partial

class C {
  public static function f() {
    return "lol";
  }
  static $x = darray['a' => C::f()];
}
